stack overflow fix

--- a/fmarket/src/main/webapp/app/pages/registrationPage/registrationPage.css
+++ b/fmarket/src/main/webapp/app/pages/registrationPage/registrationPage.css
@@ -2,7 +2,6 @@
 	display: table;
 	width: 100%;
 	text-align: center;
-	background: url('/staticResorces/homeBackground.jpg');
 	background-size: cover;
 }
 
